# dachi

./: .gitignore  .readthedocs.yaml  README.md  fmodule_test.ipynb  language_teacher.py  pyproject.toml  pytest.ini  run.py  test_simple.py  x.py
.claude/: settings.local.json
dachi/: __init__.py  utils.py
dachi/_core/: ._learn.py  __init__.py  _ai.py  _assistant.py  _async.py  _convert.py  _core.py  _core2.py  _data.py  _instruct.py  _instruct_old.py  _io.py  _messages.py  _network.py  _param.py  _params.py  _process copy.py  _process.py  _process2.py  _read.py  _serialize.py  _struct.py  _structs.py  _structs_doc.py  _styles.py  _utils.py
dachi/act/: __init__.py  _agent.py  _asst.py  _build.py  _core.py  _data.py  _decorator_func.py  _decorators.py  _func_decorators.py  _func_decorators2.py  _functional.py  _parallel.py  _roots.py  _states.py  _status.py  _tasks.py
dachi/ai/: _ai.py  (+6 more)
docs/: adapters.md  architecture-in-practice.md  behavior-trees-and-coordination.md  communication-and-requests.md  computational-graphs.md  core-architecture.md  criterion-system.md  design-pillars.md  langmodel-adapters.md  message-system.md  optimization-guide.md  post_communication_phase_okrs_and_todos.md  process-framework.md  quick-start.md  serialization-and-state.md  tutorial-multi-agent-communication.md  tutorial-simple-chat-agent.md  usage-patterns.md
sango/: graph.py
specs/: 20251216_documentation_update_plan.md  2026-01-11-add-dachi-config.md  act_refactor_plan.md  agent_framework_rubric.md  agentic_systems_report.md  agentic_systems_report2.md  bt_upgrade_plan.md  criterion_upgrade_plan.md  dachi_comm_request_task_for_claude.md  dag_implementation_plan.md  devlog-resp.txt  devlog.md  instruct-test-progress.md  llm_adapter_improvement_plan.md  llm_architecture.md  modfield_implementation_summary.md  msg_refactoring_plan.md  openai_message_tool_handling_plan.md  options.txt  process_refactor_plan.md  resp_refactor_complete.md  resp_refactor_plan.md  restricted_schema_guide.md  restricted_schema_guide_historical.md  restricted_schema_guide_progress.md  state_chart_history_implementation_plan.md  state_chart_implementation_plan.md  state_chart_implementation_plan_e2e_tests.md  state_chart_implementation_plan_for_chart.md  state_chart_implementation_plan_for_composite.md  state_chart_implementation_plan_for_region.md  state_chart_implementation_plan_refactor_region.md  state_chart_test_fixes.md  state_chart_validation_plan.md  test-ai-and-refactor-out-handling.txt  test-refactored-base.md  test_ai_fixes_progress.md  test_plan_generics_serialization.md  tool_adaptation_system.md  tool_buffer_analysis.md
tests/: README.md  _structs.py
(+548 files in other folders)
